[gd_scene load_steps=15 format=3 uid="uid://cdgxldrvi7gna"]

[ext_resource type="Script" path="res://player.gd" id="1_lsxmv"]
[ext_resource type="Texture2D" uid="uid://drot4ycvyfiew" path="res://Player/Credits.webp" id="1_s47ji"]
[ext_resource type="Script" path="res://TradeMenu.gd" id="2_h1g2m"]
[ext_resource type="Texture2D" uid="uid://866hu5pcnjmn" path="res://Player/5672236.png" id="2_mnhc1"]
[ext_resource type="Texture2D" uid="uid://bvrth7xdofnaa" path="res://Player/agriculture-icon-image-gallery-16.png" id="3_swjmk"]
[ext_resource type="Texture2D" uid="uid://b22x5fltmiffg" path="res://Player/diamond-sign-illustration-for-icon-symbol-pictogram-website-or-graphic-design-element-format-png.webp" id="3_xsi3h"]
[ext_resource type="Texture2D" uid="uid://d3pffwsaei7ay" path="res://Player/arrow.png" id="4_sdjaj"]
[ext_resource type="Texture2D" uid="uid://dgmiant76mg6a" path="res://Player/9018787.png" id="4_uk7yn"]
[ext_resource type="Texture2D" uid="uid://colrfgo6y77w5" path="res://Player/1200px-Circular_arrow-blue_01.svg.png" id="5_8y3vg"]
[ext_resource type="Texture2D" uid="uid://bt5wfwjxc7d6b" path="res://Player/free-industry-1430036-1207834.webp" id="6_0fqoy"]
[ext_resource type="Texture2D" uid="uid://bodoubnw0te6r" path="res://Player/1200px-Circular_arrow-blue_012.png" id="6_cfjp7"]
[ext_resource type="Texture2D" uid="uid://dgrpw5suc625p" path="res://Player/rhydonium.png" id="6_gq5xo"]
[ext_resource type="Texture2D" uid="uid://das7kfbgcgh02" path="res://Player/Millenium-Falcon-512.webp" id="7_ujnl3"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7il8y"]
properties/0/path = NodePath(".:connectedPlayersCount")
properties/0/spawn = false
properties/0/replication_mode = 1

[node name="Player" type="Node2D"]
script = ExtResource("1_lsxmv")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -135.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -1.0
offset_top = 5.0
offset_right = 2309.0
offset_bottom = 135.0
color = Color(0.415686, 0.415686, 0.415686, 1)

[node name="OverlayContainer" type="MarginContainer" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 0
offset_top = -106.0
offset_right = 223.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/OverlayContainer"]
layout_mode = 2

[node name="Pop" type="Button" parent="CanvasLayer/Control/ColorRect/OverlayContainer/VBoxContainer"]
layout_mode = 2
text = "Population"

[node name="Ind" type="Button" parent="CanvasLayer/Control/ColorRect/OverlayContainer/VBoxContainer"]
layout_mode = 2
text = "Industry"

[node name="Pop2" type="Button" parent="CanvasLayer/Control/ColorRect/OverlayContainer/VBoxContainer"]
layout_mode = 2
text = "Happiness
"

[node name="TradeMenu" type="ColorRect" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 0
offset_left = 367.0
offset_top = -381.0
offset_right = 787.0
offset_bottom = -6.0
color = Color(0.2, 0.254902, 0.207843, 1)
script = ExtResource("2_h1g2m")
metadata/_edit_lock_ = true

[node name="IndustriesContianer" type="MarginContainer" parent="CanvasLayer/Control/ColorRect/TradeMenu"]
visible = false
layout_mode = 0
offset_top = 2.0
offset_right = 419.0
offset_bottom = 248.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer"]
layout_mode = 2

[node name="Farming" type="Button" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
text = "Farming"

[node name="FarmingLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = " "
fit_content = true
autowrap_mode = 0
tab_size = 12

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer/FarmingLabel"]
position = Vector2(11, 11.5)
scale = Vector2(0.0666666, 0.0607843)
texture = ExtResource("1_s47ji")

[node name="Industry" type="Button" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
text = "Industry"

[node name="IndustryLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "  "
fit_content = true
autowrap_mode = 0
tab_size = 12

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer/IndustryLabel"]
position = Vector2(11, 11.5)
scale = Vector2(0.0666666, 0.0607843)
texture = ExtResource("1_s47ji")

[node name="Fuel" type="Button" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
text = "Fuel
"

[node name="FuelLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "  "
fit_content = true
autowrap_mode = 0
tab_size = 12

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer/FuelLabel"]
position = Vector2(11, 11.5)
scale = Vector2(0.0666666, 0.0607843)
texture = ExtResource("1_s47ji")

[node name="LuxuryGoods" type="Button" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
text = "Luxury Goods"

[node name="LuxLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "  "
fit_content = true
autowrap_mode = 0
tab_size = 12

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer/LuxLabel"]
position = Vector2(11, 11.5)
scale = Vector2(0.0666666, 0.0607843)
texture = ExtResource("1_s47ji")

[node name="Starships" type="Button" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
text = "Starships"

[node name="StarshipsLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "  "
fit_content = true
autowrap_mode = 0
tab_size = 12

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer/StarshipsLabel"]
position = Vector2(11, 11.5)
scale = Vector2(0.0666666, 0.0607843)
texture = ExtResource("1_s47ji")

[node name="Mining" type="Button" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
text = "Mining"

[node name="MiningLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "  "
fit_content = true
autowrap_mode = 0
tab_size = 12

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer/MiningLabel"]
position = Vector2(11, 11.5)
scale = Vector2(0.0666666, 0.0607843)
texture = ExtResource("1_s47ji")

[node name="FarmingContainer" type="Control" parent="CanvasLayer/Control/ColorRect/TradeMenu"]
anchors_preset = 0
offset_right = 420.0
offset_bottom = 375.0
metadata/_edit_lock_ = true

[node name="Exchange1" type="Control" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer"]
anchors_preset = 0
offset_right = 108.0
offset_bottom = 65.0

[node name="ResourceIcon" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange1"]
position = Vector2(33, 35)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_swjmk")

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange1/ResourceIcon"]
offset_left = -130.0
offset_top = 95.0
offset_right = 120.0
offset_bottom = 202.0
mouse_filter = 1
theme_override_font_sizes/font_size = 78
text = "2"
horizontal_alignment = 1

[node name="arr" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange1"]
position = Vector2(108.075, 34)
scale = Vector2(0.368471, 0.385714)
texture = ExtResource("4_sdjaj")

[node name="CreditIcon" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange1"]
position = Vector2(173, 34)
scale = Vector2(0.136667, 0.109804)
texture = ExtResource("1_s47ji")

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange1"]
layout_mode = 0
offset_top = 70.0
offset_right = 420.0
offset_bottom = 90.0

[node name="ExpectedIncome" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange1"]
layout_mode = 0
offset_top = 80.0
offset_right = 199.0
offset_bottom = 100.0
mouse_filter = 2
scroll_active = false

[node name="Exchange2" type="Control" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer"]
anchors_preset = 0
offset_right = 183.0
offset_bottom = 40.0

[node name="ResourceIndustry" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2"]
position = Vector2(171, 123)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_0fqoy")

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2/ResourceIndustry"]
offset_left = -130.0
offset_top = 95.0
offset_right = 120.0
offset_bottom = 202.0
theme_override_font_sizes/font_size = 78
text = "2"
horizontal_alignment = 1

[node name="CreditIcon2" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2"]
position = Vector2(282, 123)
scale = Vector2(0.136667, 0.109804)
texture = ExtResource("1_s47ji")

[node name="ResourceIcon3" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2"]
position = Vector2(34, 124)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_swjmk")

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2/ResourceIcon3"]
offset_left = -130.0
offset_top = 95.0
offset_right = 120.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 78
text = "2"
horizontal_alignment = 1

[node name="arr4" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2"]
position = Vector2(109.075, 123)
scale = Vector2(0.368471, 0.385714)
texture = ExtResource("4_sdjaj")

[node name="arr5" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2"]
position = Vector2(224, 123)
scale = Vector2(0.368471, 0.385714)
texture = ExtResource("4_sdjaj")

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2"]
layout_mode = 0
offset_top = 160.0
offset_right = 420.0
offset_bottom = 180.0

[node name="ExpectedIncome" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange2"]
layout_mode = 0
offset_left = 1.0
offset_top = 169.0
offset_right = 200.0
offset_bottom = 189.0
scroll_active = false

[node name="Exchange3" type="Control" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer"]
anchors_preset = 0
offset_right = 381.0
offset_bottom = 62.0

[node name="ResourceIndustry2" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3"]
position = Vector2(171, 225)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_0fqoy")

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3/ResourceIndustry2"]
offset_left = -130.0
offset_top = 95.0
offset_right = 120.0
offset_bottom = 202.0
theme_override_font_sizes/font_size = 78
text = "2"
horizontal_alignment = 1

[node name="ResourceIcon4" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3"]
position = Vector2(34, 226)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_swjmk")

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3/ResourceIcon4"]
offset_left = -130.0
offset_top = 95.0
offset_right = 120.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 78
text = "2"
horizontal_alignment = 1

[node name="arr6" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3"]
position = Vector2(109.075, 225)
scale = Vector2(0.368471, 0.385714)
texture = ExtResource("4_sdjaj")

[node name="arr7" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3"]
position = Vector2(224, 225)
scale = Vector2(0.368471, 0.385714)
texture = ExtResource("4_sdjaj")

[node name="ResourceIcon2" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3"]
position = Vector2(282, 225)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_uk7yn")

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3"]
layout_mode = 0
offset_top = 261.0
offset_right = 420.0
offset_bottom = 281.0

[node name="ExpectedIncome" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeMenu/FarmingContainer/Exchange3"]
layout_mode = 0
offset_top = 278.0
offset_right = 199.0
offset_bottom = 298.0
scroll_active = false

[node name="OverlayCheck" type="CheckButton" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 24.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/OverlayCheck"]
layout_mode = 0
offset_left = 45.0
offset_right = 128.0
offset_bottom = 24.0
text = "Overlays"

[node name="Resources" type="Control" parent="CanvasLayer/Control/ColorRect"]
anchors_preset = 0
offset_right = 4.0
offset_bottom = 41.0

[node name="Credits" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/Resources"]
position = Vector2(13.25, 103.2)
scale = Vector2(0.075, 0.075)
texture = ExtResource("1_s47ji")

[node name="Metals" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/Resources"]
position = Vector2(179.25, 103.2)
scale = Vector2(0.075, 0.075)
texture = ExtResource("2_mnhc1")

[node name="LuxGoods" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/Resources"]
position = Vector2(336.25, 105.2)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_xsi3h")

[node name="CivGoods" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/Resources"]
position = Vector2(485.25, 105.2)
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_uk7yn")

[node name="Fuel" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/Resources"]
position = Vector2(630.3, 105.5)
scale = Vector2(0.05625, 0.05125)
texture = ExtResource("6_gq5xo")

[node name="Starships" type="Sprite2D" parent="CanvasLayer/Control/ColorRect/Resources"]
position = Vector2(787.2, 107.56)
scale = Vector2(0.0789064, 0.0725)
texture = ExtResource("7_ujnl3")

[node name="CreditLabel" type="Label" parent="CanvasLayer/Control/ColorRect/Resources"]
layout_mode = 1
anchors_preset = -1
anchor_top = 3.0
anchor_right = 0.5
anchor_bottom = 3.9
offset_left = 30.25
offset_top = -34.8
offset_right = 126.25
offset_bottom = -34.8

[node name="MetalLabel" type="Label" parent="CanvasLayer/Control/ColorRect/Resources"]
layout_mode = 1
anchors_preset = -1
anchor_top = 3.0
anchor_right = 0.5
anchor_bottom = 3.9
offset_left = 201.25
offset_top = -34.8
offset_right = 297.25
offset_bottom = -34.8

[node name="LuxLabel" type="Label" parent="CanvasLayer/Control/ColorRect/Resources"]
layout_mode = 1
anchors_preset = -1
anchor_top = 3.0
anchor_right = 0.5
anchor_bottom = 3.9
offset_left = 352.25
offset_top = -34.8
offset_right = 448.25
offset_bottom = -34.8

[node name="CivLabel" type="Label" parent="CanvasLayer/Control/ColorRect/Resources"]
layout_mode = 1
anchors_preset = -1
anchor_top = 3.0
anchor_right = 0.5
anchor_bottom = 3.9
offset_left = 508.25
offset_top = -32.8
offset_right = 604.25
offset_bottom = -32.8

[node name="FuelLabel" type="Label" parent="CanvasLayer/Control/ColorRect/Resources"]
layout_mode = 1
anchors_preset = -1
anchor_top = 3.0
anchor_right = 0.5
anchor_bottom = 3.9
offset_left = 653.6
offset_top = -34.0
offset_right = 749.6
offset_bottom = -34.0

[node name="StarshipLabel" type="Label" parent="CanvasLayer/Control/ColorRect/Resources"]
layout_mode = 1
anchors_preset = -1
anchor_top = 3.0
anchor_right = 0.5
anchor_bottom = 3.9
offset_left = 817.2
offset_top = -32.44
offset_right = 913.2
offset_bottom = -32.44

[node name="TradeCheck" type="CheckButton" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 0
offset_left = 230.0
offset_right = 274.0
offset_bottom = 24.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/ColorRect/TradeCheck"]
layout_mode = 0
offset_left = 45.0
offset_right = 151.0
offset_bottom = 24.0
text = "Trade Menu"

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -130.0
grow_horizontal = 0
grow_vertical = 0

[node name="EndTurnButton" type="TextureButton" parent="CanvasLayer/Control2"]
layout_mode = 0
offset_top = 1.0
offset_right = 103.0
offset_bottom = 92.0
toggle_mode = true
texture_normal = ExtResource("5_8y3vg")
texture_pressed = ExtResource("6_cfjp7")
ignore_texture_size = true
stretch_mode = 0

[node name="EndTurnLabel" type="RichTextLabel" parent="CanvasLayer/Control2/EndTurnButton"]
layout_mode = 0
offset_left = 21.0
offset_top = 92.0
offset_right = 93.0
offset_bottom = 115.0
text = "End Turn"
fit_content = true

[node name="Symbol" type="RichTextLabel" parent="CanvasLayer/Control2/EndTurnButton"]
layout_mode = 0
offset_left = 49.0
offset_top = 109.0
offset_right = 57.0
offset_bottom = 133.0
text = "/"

[node name="OutOf" type="RichTextLabel" parent="CanvasLayer/Control2/EndTurnButton"]
layout_mode = 0
offset_left = 58.0
offset_top = 109.0
offset_right = 83.0
offset_bottom = 132.0
text = "2"

[node name="EndTurnReadyCount" type="RichTextLabel" parent="CanvasLayer/Control2/EndTurnButton"]
layout_mode = 0
offset_left = 28.0
offset_top = 109.0
offset_right = 50.0
offset_bottom = 135.0
text = "1"
text_direction = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_7il8y")

[connection signal="pressed" from="CanvasLayer/Control/ColorRect/TradeMenu/IndustriesContianer/VBoxContainer/Farming" to="CanvasLayer/Control/ColorRect/TradeMenu" method="_on_farming_pressed"]
[connection signal="toggled" from="CanvasLayer/Control/ColorRect/OverlayCheck" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/ColorRect/TradeCheck" to="." method="_on_trade_check_toggled"]
[connection signal="toggled" from="CanvasLayer/Control2/EndTurnButton" to="." method="_on_end_turn_button_toggled"]
